force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/agf__ADM_Feature_Freeze_Status__c.object-meta.xml
<CustomObject>
    <label>Freeze Team Status</label>
    <nameField>
        <displayFormat>FS-{0000000}</displayFormat>
        <label>Freeze Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Freeze Team Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>