force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__All_New_Upgraded_3PP_are_Approved__c.field-meta.xml
<CustomField>
    <fullName>agf__All_New_Upgraded_3PP_are_Approved__c</fullName>
    <description>All New or Upgraded 3rd Party Software Products have Approval through the 3PP Process (Yes/No)</description>
    <inlineHelpText>All New or Upgraded 3rd Party Software Products have Approval through the 3PP Process.  Feature Freeze requirement is that all are APPROVED.</inlineHelpText>
    <label>All New/Upgraded 3PP are Approved</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>