force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__All_Sprint_DOD_Criteria_Met__c.field-meta.xml
<CustomField>
    <fullName>agf__All_Sprint_DOD_Criteria_Met__c</fullName>
    <inlineHelpText>All Sprint DOD criteria must be met</inlineHelpText>
    <label>All Sprint DOD Criteria Met</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>