force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Assessment_Details__c.field-meta.xml
<CustomField>
    <fullName>agf__Assessment_Details__c</fullName>
    <inlineHelpText>Please provide details on why the team is in Yellow or Red status in  terms of meeting FF</inlineHelpText>
    <label>Assessment Details</label>
    <type>TextArea</type>
</CustomField>