force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Bugs_Fixed_the_Week_of_Feature_Freeze__c.field-meta.xml
<CustomField>
    <fullName>agf__Bugs_Fixed_the_Week_of_Feature_Freeze__c</fullName>
    <description>Bugs Fixed the Week of Feature Freeze (explain if count is high relative to previous 2-3 weeks)</description>
    <inlineHelpText>Bugs Fixed the Week of Feature Freeze (explain if count is high relative to previous 2-3 weeks)</inlineHelpText>
    <label>Bugs Fixed the Week of Feature Freeze</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>