force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Build__c.field-meta.xml
<CustomField>
    <fullName>agf__Build__c</fullName>
    <formula>agf__Team_Release__r.agf__Build__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Build</label>
    <type>Text</type>
</CustomField>