force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Comments__c.field-meta.xml
<CustomField>
    <fullName>agf__Comments__c</fullName>
    <label>Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>