force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Core_Release_against_Prod_Hybrid_Apps__c.field-meta.xml
<CustomField>
    <fullName>agf__Core_Release_against_Prod_Hybrid_Apps__c</fullName>
    <description>Used to track if teams who have features that are surfaced in the S1 Mobile application have tested the S1 application currently in production (all supported Hybrid Containers, as per the current S1 Support Matrix) against the new core Major Release that is being developed.</description>
    <inlineHelpText>Has the team certified the Core Major Release candidate against all &apos;Production&apos; versions of the supported Hybrid Containers as per the current S1 Support Matrix?  (e.g. iOS, Android, Windows)</inlineHelpText>
    <label>Release Tested on Prod S1 Hybrid Apps</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A for this team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>