force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__DB_Upgrade_Scripts_Complete_and_Verified__c.field-meta.xml
<CustomField>
    <fullName>agf__DB_Upgrade_Scripts_Complete_and_Verified__c</fullName>
    <description>DB Upgrade Scripts Complete and Verified (Yes/No)</description>
    <inlineHelpText>DB Upgrade Scripts Complete and Verified (Yes/No)</inlineHelpText>
    <label>DB Upgrade Scripts Complete and Verified</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>