force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Deferred_Work__c.field-meta.xml
<CustomField>
    <fullName>agf__Deferred_Work__c</fullName>
    <inlineHelpText>This is work that has been moved to next release that has been placed behind a perm.</inlineHelpText>
    <label>Deferred Work</label>
    <type>TextArea</type>
</CustomField>