force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Dev_Leadership_Sign_Off_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>agf__Dev_Leadership_Sign_Off_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For confirming that the Cloud Engineering Lead associated to that team has reviewed the status and confirmed the signoff, especially if the team has not signed off or is signing off without meeting criteria.</description>
    <inlineHelpText>Used by the Engineering Cloud Lead (or their delegate) to confirm the Team Signoff Status.</inlineHelpText>
    <label>Cloud Leadership Sign Off Confirmed</label>
    <type>Checkbox</type>
</CustomField>