force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Dev_Signoff_By__c.field-meta.xml
<CustomField>
    <fullName>agf__Dev_Signoff_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To document who is providing the Cloud Leadership Signoff</description>
    <inlineHelpText>Enter the name of the Cloud Lead or delegate who is confirming signoff.</inlineHelpText>
    <label>Cloud Lead Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Feature_Freeze_Team_Status1</relationshipName>
    <type>Lookup</type>
</CustomField>