force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__EA_2Week_NotReady_Label__c.field-meta.xml
<CustomField>
    <fullName>agf__EA_2Week_NotReady_Label__c</fullName>
    <formula>&quot;We may be the team that causes the release to be delayed.&quot; +  BR() +
&quot;(Explain what your next steps are and what assistance you need.)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>C</label>
    <type>Text</type>
</CustomField>