force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__EA_6Week_Ready_Label__c.field-meta.xml
<CustomField>
    <fullName>agf__EA_6Week_Ready_Label__c</fullName>
    <formula>&quot;At Feature Freeze, we’ll be ready to release to GS0 and provide a great experience for internal and external users. If necessary, we will disable incomplete features at Feature Freeze.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>A</label>
    <type>Text</type>
</CustomField>