force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__EA_6Week_Risk_Label__c.field-meta.xml
<CustomField>
    <fullName>agf__EA_6Week_Risk_Label__c</fullName>
    <formula>&quot;Excluding hammer tests, we probably won&apos;t be done at Feature Freeze but we can release if we can come up with an alternative solution.&quot; +  BR() +
&quot;(Explain your proposed alternative solution and any assistance you need.)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>B</label>
    <type>Text</type>
</CustomField>