force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__EA_Test_Response__c.field-meta.xml
<CustomField>
    <fullName>agf__EA_Test_Response__c</fullName>
    <description>Response for: Does your team have adequate test coverage for any re-factoring work that is being done? If not, what is your plan to add test coverage?</description>
    <inlineHelpText>Enter your response for: &quot;Does your team have adequate test coverage for any re-factoring work that is being done? If not, what is your plan to add test coverage?&quot;</inlineHelpText>
    <label>Test Response</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>