force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__EA_Trust_Label__c.field-meta.xml
<CustomField>
    <fullName>agf__EA_Trust_Label__c</fullName>
    <formula>&quot;Is your team on course to complete the TRUST work for which you planned?  If not, explain why you changed course.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>1</label>
    <type>Text</type>
</CustomField>