force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__EA_Trust_Response__c.field-meta.xml
<CustomField>
    <fullName>agf__EA_Trust_Response__c</fullName>
    <description>Response for: Is your team on course to complete the TRUST work for which you planned? If not, explain why you changed course.</description>
    <inlineHelpText>Enter response for question: &quot;Is your team on course to complete the TRUST work for which you planned? If not, explain why you changed course.&quot;</inlineHelpText>
    <label>Trust Response</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>