force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Explain_3rd_Party_Product__c.field-meta.xml
<CustomField>
    <fullName>agf__Explain_3rd_Party_Product__c</fullName>
    <description>If the Answer is NO then provide an explanation and the plan.</description>
    <inlineHelpText>If the Answer is NO then provide an explanation and the plan.</inlineHelpText>
    <label>Explain Unapproved 3rd Party Product</label>
    <type>TextArea</type>
</CustomField>