force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Explain_Automated_Tests_Annotated__c.field-meta.xml
<CustomField>
    <fullName>agf__Explain_Automated_Tests_Annotated__c</fullName>
    <description>Explain if the %Automated Tests Annotated is less than 80%</description>
    <inlineHelpText>Explain if the %Automated Tests Annotated is less than 80%</inlineHelpText>
    <label>Explain % Automated Tests Annotated</label>
    <type>TextArea</type>
</CustomField>